fix(back-scrolling): Change spaces on mobile; Fix z-index

--- a/src/_sass/components/_back-scrolling.scss
+++ b/src/_sass/components/_back-scrolling.scss
@@ -1,7 +1,8 @@
 .back-scrolling {
   position: fixed;
-  bottom: 40px;
-  right: 40px;
+  z-index: 1;
+  bottom: 20px;
+  right: 20px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -13,6 +14,11 @@
   opacity: 0;
   visibility: hidden;
   transition: 200ms ease;
+
+  @include breakpoint(medium up)  {
+    bottom: 40px;
+    right: 40px;
+  }
 
   &:hover {
     background-color: #bdcbd2;
